update tooltip and tooltip css (thanks @timelyportfolio)

--- a/inst/www/nvd3/css/nv.d3.css
+++ b/inst/www/nvd3/css/nv.d3.css
@@ -668,4 +668,14 @@ svg .title {
   */
 }
 
+.nvtooltip {
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  background-color: #000;
+  border-radius: 4px;
+}
+
+
+
 
